--- a/Combined_VIF_analysis/InsertionAnalysis/Shared_Insertion_Sites.Rmd
+++ b/Combined_VIF_analysis/InsertionAnalysis/Shared_Insertion_Sites.Rmd
@@ -23,6 +23,7 @@ nrow(insertions_data)
 
 # 33892
 
+# now 37184
 ```
 
 ```{r}
@@ -32,21 +33,21 @@ nrow(insertions_data)
 num_total_unique_insertion_sites = insertions_data %>% select(insertion_token) %>%  unique() %>% nrow()
 
 message("num unique insertion sites: ", num_total_unique_insertion_sites)
-# 33059
+# 33059 -> 36266
 
 # count number of instances among shared sites.
 num_shared_insertion_sites = insertions_data %>% select(insertion_token, participant, seqtype, cohort) %>% unique() %>% 
                             group_by(insertion_token) %>% tally() %>% filter(n>1) %>% summarize(sum(n))
 
 message('num shared insertions: ', num_shared_insertion_sites)
-# 1258
+# 1258 -> 1375
 
 # count unique sites not instances
 num_unique_shared =  insertions_data %>% select(insertion_token, participant, seqtype, cohort) %>% unique() %>% 
                      group_by(insertion_token) %>% tally() %>% filter(n>1) %>% select(insertion_token) %>% nrow()
 
 message('num unique shared insertion sites: ', num_unique_shared)
-# 496
+# 496 -> 528
 
 shared_insertion_sites = insertions_data %>% 
                          select(insertion_token, participant, cohort, seqtype) %>% unique() %>% 
@@ -71,7 +72,7 @@ shared_insertion_sites = left_join(shared_insertion_sites, insertions_data, by='
 
 shared_insertion_sites %>% select(insertion_token, participant, seqtype, cohort) %>% unique() %>% nrow()
 
-# 1258
+# 1258 -> 1375
 
 ```
 
@@ -157,7 +158,7 @@ exact_matching_ortho_validations  %>% group_by(orthovalid_type) %>% tally()
 ## first remove the ortho-validated entries above.
 
 nrow(shared_insertion_sites)
-# 1277
+# 1277 -> 1394
 
 shared_insertion_sites_minus_orthovalid = left_join(shared_insertion_sites,
                                                     shared_insertion_sites_diff_seqtypes %>% 
@@ -168,7 +169,7 @@ shared_insertion_sites_minus_orthovalid = left_join(shared_insertion_sites,
   filter(is.na(orthovalid)) %>% select(-orthovalid)
                             
 nrow(shared_insertion_sites_minus_orthovalid)
-# 714
+# 714 -> 831
 
 ```
 
@@ -226,7 +227,7 @@ shared_insertion_sites_diff_participants %>%
 
 shared_insertion_sites_diff_participants %>% select(insertion_token) %>% unique() %>% nrow()
 
-# 254
+# 254 -> 286
 
 ```
 
@@ -239,13 +240,13 @@ shared_insertion_sites_diff_participants %>% select(insertion_token, seqtype, sp
 
 
 #seqtype splice_type n
-# HYB	.	44		
+# HYB	.	44	-> 78	
 # HYB	GT-AG	2		
 # RNA	.	86		
 # RNA	GC-AG	2		
 # RNA	GT-AG	71		
 # WGS	.	6		
-# WXS	.	62		
+# WXS	.	62		-> 63
 # WXS	GT-AG	1	
 
 ```
@@ -260,7 +261,7 @@ shared_insertion_sites_diff_participants %>%
 
 
 # splice_type  n
-# .	179			
+# .	179		-> 211	
 # GC-AG	2			
 # GT-AG	73	
 
@@ -281,7 +282,7 @@ shared_insertion_sites_diff_participants = shared_insertion_sites_diff_participa
 
 shared_insertion_sites_diff_participants %>% select(insertion_token, virus_coord, seqtype, total, total_rpm, frac_dominant_total_rpm, suspicious, num_participants_shared_insertion, sample_name,  contig)                                
                                          
-# 690 rows
+# 690 rows -> 807
 
 ```
 
@@ -312,8 +313,8 @@ shared_insertion_sites_diff_participants  %>% select(participant, insertion_toke
   group_by(suspicious) %>% tally()
 
 # suspicious  n
-# FALSE	616			
-# TRUE	74	
+# FALSE	616	-> 719		
+# TRUE	74	-> 88
 
 ```
 
@@ -323,7 +324,7 @@ shared_insertion_sites_diff_participants  %>% select(participant, insertion_toke
 shared_insertion_sites_diff_participants %>% filter(suspicious) %>%
   select(insertion_token, virus_coord, seqtype, total, total_rpm, frac_dominant_total_rpm, num_participants_shared_insertion, sample_name,  contig) 
 
-# 74 rows
+# 74 rows -> 88
 
 ```
 
@@ -333,6 +334,7 @@ shared_insertion_sites_diff_participants %>% filter(suspicious) %>% group_by(seq
 
 
 # seqtype  cohort  n
+# HYB   Curie   14
 # HYB	NATGEN2015	17		
 # RNA	CCLE	1		
 # RNA	TCGA	10		
@@ -357,7 +359,7 @@ repr_virus_breakend_data = insertions_data %>%
                        arrange(desc(total_rpm)) %>% filter(row_number() == 1) %>% ungroup() 
 nrow(repr_virus_breakend_data)
 
-# 22874
+# 22874 -> 24827
 
 repr_virus_breakend_data = repr_virus_breakend_data %>%
                       # select best per virus, human_coord (dealing with EBV multistrain issue)
@@ -365,11 +367,11 @@ repr_virus_breakend_data = repr_virus_breakend_data %>%
                        arrange(desc(total_rpm)) %>% filter(row_number() == 1) %>% ungroup() 
 nrow(repr_virus_breakend_data)
 
-# 22588
+# 22588 -> 24538
                       
 nrow(insertions_data)
 
-# 33892
+# 33892 -> 37184
 
 insertions_data = left_join(insertions_data,
                             repr_virus_breakend_data %>% mutate(repr_virus_breakend = TRUE) %>% 
@@ -378,7 +380,7 @@ insertions_data = left_join(insertions_data,
   mutate(repr_virus_breakend = ifelse(is.na(repr_virus_breakend), FALSE, repr_virus_breakend))
 
 nrow(insertions_data)
-# 33892
+# 33892 -> 37184
 
 write.table(insertions_data, 
             file="all_insertions_and_virus_content_merged.w_shared_site_info.tsv", quote=F, sep="\t", row.names=F)
