--- a/Combined_VIF_analysis/DecorateInsertions/DecorateInsertions.Rmd
+++ b/Combined_VIF_analysis/DecorateInsertions/DecorateInsertions.Rmd
@@ -46,10 +46,10 @@ insertions_data = read.table("../HotspotsRevisited/hotspots.win_1e5.tsv.w_20_nei
 
 
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 nrow(insertions_data %>% unique())
-# 33430
+# 33430 -> 36708
 
 ```
 
@@ -72,7 +72,7 @@ nrow(fusions_at_insertions)
 # 828
 
 fusions_at_insertions %>% filter(grepl(";", fusions_at_insertion))
-# 0 rows
+# 0 rows (bug fixed) -> 82
 
 ```
 
@@ -85,7 +85,7 @@ insertions_data = left_join(insertions_data,
                                  'insertion' = 'contig'))
 
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 nrow(insertions_data %>% filter(! is.na(fusions_at_insertion)))
 # 876
@@ -106,7 +106,7 @@ insertions_data = left_join(insertions_data,
                             spliced_insertions_info,
                             by=c('sample_id', 'insertion'='contig', 'seqtype'))
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 nrow(insertions_data %>% filter(! is.na(spliced_gene)) )
 # 579
@@ -130,7 +130,7 @@ insertions_data = left_join(insertions_data,
                             by=c('sample_id', 'insertion'))
 
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 nrow(cnv_info %>% filter(! is.na(copy_number)))
 # 5693
@@ -148,13 +148,13 @@ nrow(expr_info)
 # 10465
 
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 insertions_data = left_join(insertions_data,
                             expr_info,
                             by=c('sample_id', 'insertion', 'seqtype'))
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 nrow(insertions_data %>% filter(! is.na(expr_quantile)) )
 # 10465
@@ -166,7 +166,7 @@ nrow(insertions_data %>% filter(! is.na(expr_quantile)) )
 
 ```{r}
 nrow(insertions_data)
-# 33430
+# 33430 -> 36708
 
 nrow(insertions_data %>% filter(! is.na(fusions_at_insertion)))
 # 876
