--- a/Combined_VIF_analysis/HotspotsRevisited/AnalyzeTopHotspots.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/AnalyzeTopHotspots.Rmd
@@ -306,12 +306,36 @@ natgen_virus_rep_plot +  theme(axis.text.x = element_text(angle = 90, hjust = 1)
 ```
 
 
+
+```{r}
+
+# Curie hybcap data 
+
+curie_virus_data = insertions_data %>% filter(cohort=='Curie') %>%
+  select(hotspot, virus, project, participant) %>% unique() %>% 
+  mutate(virus_projname = paste(virus, project)) %>%
+  group_by(hotspot, virus_projname) %>% tally(name='num_participants')
+
+
+
+curie_virus_rep_plot = curie_virus_data %>% ggplot(aes(x=hotspot, y=virus, fill=num_participants)) + geom_tile() + ggtitle("Curie")  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+
+curie_virus_rep_plot +  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+```
+
+
+
+
 ```{r}
 
 pg4 = plot_grid(
           gtex_virus_rep_plot  + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()), 
           ccle_virus_rep_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()),
-           natgen_virus_rep_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()), 
+           natgen_virus_rep_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()),
+          curie_virus_rep_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()),
           tcga_virus_rep_plot +  theme(axis.text.x = element_text(angle = 90, hjust = 1)),
           ncol = 1, 
           align='v',
@@ -319,6 +343,7 @@ pg4 = plot_grid(
           rel_heights=c(0.1,
                         0.1,
                         0.1, 
+                        0.1,
                         0.3
                         ))
 
