--- a/4.Combined_VIF_analysis/InsertionHotspots/SamplesMultHotspotsRepresented.Rmd
+++ b/4.Combined_VIF_analysis/InsertionHotspots/SamplesMultHotspotsRepresented.Rmd
@@ -18,32 +18,64 @@ data = read.table("../DecorateInsertions/all_insertions_and_virus_content_merged
 
 ```{r}
 
-sample_hotspots_ge11 = data %>% filter(hotspot_participant_count >= 11) %>% select(sample_id, hotspot, virus) %>% unique()
 
-head(sample_hotspots_ge11)
+MIN_HOTSPOT_PARTICIPANTS = 9
+
+sample_hotspots_multi = data %>% filter(hotspot_participant_count >= MIN_HOTSPOT_PARTICIPANTS) %>% select(sample_id, hotspot, virus) %>% unique()
+
+head(sample_hotspots_multi)
 
 
 ```
 
 
 ```{r}
-sample_mult_hotspots_ge11 = sample_hotspots_ge11 %>% select(sample_id, hotspot) %>% unique() %>% group_by(sample_id) %>% tally(name='num_hotspots_ge11') %>% filter(num_hotspots_ge11 > 1)
+sample_mult_hotspots_multi = sample_hotspots_multi %>% select(sample_id, hotspot) %>% unique() %>% group_by(sample_id) %>% tally(name='num_hotspots_multi') %>% filter(num_hotspots_multi > 1)
 
-head(sample_mult_hotspots_ge11 %>% arrange(desc(num_hotspots_ge11)))
-
-```
-
-```{r}
-#  how many samples have multiple ge11 hotspots represented?
-
-nrow(sample_mult_hotspots_ge11)
-
+head(sample_mult_hotspots_multi %>% arrange(desc(num_hotspots_multi)))
 
 ```
 
 ```{r}
+#  how many samples have multiple hotspots represented?
 
-left_join(sample_mult_hotspots_ge11, sample_hotspots_ge11, by='sample_id') %>% arrange(desc(num_hotspots_ge11))
+nrow(sample_mult_hotspots_multi)
+
+# 432 samples with multiple hotspots represented
+
+```
+
+```{r}
+
+left_join(sample_mult_hotspots_multi, sample_hotspots_multi, by='sample_id') %>% arrange(desc(num_hotspots_multi))
+
+```
+
+
+```{r}
+
+sample_hotspots_multi %>% filter(sample_id == "SRR1611094") %>% select(hotspot, virus) %>% unique() %>% group_by(virus) %>% tally()
+
+# have 127 HPV33 insertions at hotspots in SRR1611095
+
+```
+
+```{r}
+sample_hotspots_multi %>% filter(sample_id == "VCAP") %>% select(hotspot, virus) %>% unique() %>% group_by(virus) %>% tally()
+
+
+# 68 Murine type C retrovirus insertions at hotspots in VCAP
+
+```
+
+
+```{r}
+
+ 
+sample_hotspots_multi %>% filter(sample_id == "GTEX-1F5PK-0001-SM-EVR37") %>% select(hotspot, virus) %>% unique() %>% group_by(virus) %>% tally()
+
+
+# 52 EBV insertions at hotspots in GTEx sample: GTEX-1F5PK-0001-SM-EVR37
 
 ```
 
@@ -51,9 +83,9 @@ left_join(sample_mult_hotspots_ge11, sample_hotspots_ge11, by='sample_id') %>% a
 
 
 ```{r}
-inner_join(sample_mult_hotspots_ge11, 
+inner_join(sample_mult_hotspots_multi, 
            data %>% select(sample_id, fusions_at_insertion,  spliced_gene) %>% filter(! (is.na(fusions_at_insertion) & is.na(spliced_gene))) %>% unique(), 
-           by='sample_id') %>% arrange(desc(num_hotspots_ge11), sample_id)
+           by='sample_id') %>% arrange(desc(num_hotspots_multi), sample_id)
 ```
 
 
