--- a/4.Combined_VIF_analysis/Insertion_STARF_Fusion_Mapping/InsertionFusionMappingEarlierSTARF.Rmd
+++ b/4.Combined_VIF_analysis/Insertion_STARF_Fusion_Mapping/InsertionFusionMappingEarlierSTARF.Rmd
@@ -39,7 +39,7 @@ starF_fusions_data = starF_fusions_data %>% filter(! ( grepl("HLA|IGH|IGL|MT-", 
 
 ```{r}
 
-CCLE_fusion_data = read.table(gzfile("../../CCLE_VIF_analysis/data/CCLE.starF.consolidated.Mar2019.tsv.gz"), header=T, sep="\t", stringsAsFactors = F, com='') %>%
+CCLE_fusion_data = read.table(gzfile("../../3.InsertionCatalog/CCLE_VIF_analysis/data/CCLE.starF.consolidated.Mar2019.tsv.gz"), header=T, sep="\t", stringsAsFactors = F, com='') %>%
   rename(fusion_name = X.FusionName, sample = sample_name)  %>% 
   filter(! ( grepl("HLA|IGH|IGL|MT-", fusion_name)) ) %>%
   filter(FFPM >= 0.1)
